@@ -53,7 +53,7 @@ switch ($op) {
         $adminObject->addItemButton(\_AM_WGEVENTS_ADD_TEXTBLOCK, 'textblock.php?op=new');
         $GLOBALS['xoopsTpl']->assign('buttons', $adminObject->displayButton('left'));
         $textblockCount = $textblockHandler->getCountTextblocks();
-        $textblockAll = $textblockHandler->getAllTextblocks($start, $limit);
+        $textblockAll = $textblockHandler->getAllTextblocks();
         $GLOBALS['xoopsTpl']->assign('textblockCount', $textblockCount);
         $GLOBALS['xoopsTpl']->assign('wgevents_url', \WGEVENTS_URL);
         $GLOBALS['xoopsTpl']->assign('wgevents_upload_url', \WGEVENTS_UPLOAD_URL);
@@ -65,12 +65,13 @@ switch ($op) {
                 $GLOBALS['xoopsTpl']->append('textblocks_list', $textblock);
                 unset($textblock);
             }
+            /*
             // Display Navigation
             if ($textblockCount > $limit) {
                 require_once \XOOPS_ROOT_PATH . '/class/pagenav.php';
                 $pagenav = new \XoopsPageNav($textblockCount, $limit, $start, 'start', 'op=list&limit=' . $limit);
                 $GLOBALS['xoopsTpl']->assign('pagenav', $pagenav->renderNav());
-            }
+            }*/
         } else {
             $GLOBALS['xoopsTpl']->assign('error', \_AM_WGEVENTS_THEREARENT_TEXTBLOCKS);
         }
