@@ -24,6 +24,7 @@
  - added payment info for events (goffy)
  - fixed bug of preselect selectbox (goffy)
  - removed line breaks in mails for location text (goffy)
+ - removed query limits in admin area -> handled by tablesorter (goffy)
  
 ==============================================================
 1.0.0 [2022/01/04 9:28:23]
